Update info for icons to appear in each table's info

--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_SpecialEditInfo.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_SpecialEditInfo.cshtml
@@ -2,12 +2,24 @@
 
 
 <div id="page-info" style="display:none;">
+	
+	
+	
+	<div data-info-for="info-code">
+		<span>Special Code</span>
+		<div>
+			<p>
+
+			</p>
+			
+		</div>
+	</div>
 
 	<div data-info-for="info-code">
 		<span>Special Code</span>
 		<div>
 			<p>
-			
+
 			</p>
 		</div>
 	</div>
@@ -15,7 +27,7 @@
 		<span>Enabled</span>
 		<div>
 			<p>
-			
+
 			</p>
 		</div>
 	</div>
@@ -23,7 +35,7 @@
 		<span>Text</span>
 		<div>
 			<p>
-			
+
 			</p>
 		</div>
 	</div>
@@ -31,7 +43,7 @@
 		<span>Selected Text</span>
 		<div>
 			<p>
-			
+
 			</p>
 		</div>
 	</div>
@@ -39,7 +51,7 @@
 		<span>Short Text</span>
 		<div>
 			<p>
-			
+
 			</p>
 		</div>
 	</div>
@@ -47,7 +59,7 @@
 		<span>Is Valued</span>
 		<div>
 			<p>
-			
+
 			</p>
 		</div>
 	</div>
@@ -55,7 +67,7 @@
 		<span>Single Line</span>
 		<div>
 			<p>
-			
+
 			</p>
 		</div>
 	</div>
@@ -63,7 +75,7 @@
 		<span>Warning Text</span>
 		<div>
 			<p>
-			
+
 			</p>
 		</div>
 	</div>
@@ -71,7 +83,7 @@
 		<span>Notes</span>
 		<div>
 			<p>
-			
+
 			</p>
 		</div>
 	</div>
