--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_ListIconsInfo.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_ListIconsInfo.cshtml
@@ -1,24 +1,16 @@
-﻿@model string;
-@* 
-
+﻿@*
 Pass the model as the string name of the list for which this information applies 
 In other respects this is an info popup for the table's icons
 
 *@
-<div data-info-for="info-list-icons">
-	<span>List Icons for tables</span>
-	<div>
-		<p>The icons in the table perform the following actions:</p>
-		<ul>
-			<li><i class="fa-solid fa-plus"></i> - Add a new record.</li>
-			<li><i class="fa-solid fa-pen-to-square"></i> - Edit the record in the row.</li>
-			<li><i class="fa-solid fa-copy"></i> - Copy the record in the row.</li>
-			<li><i class="fa-solid fa-times"></i> - Delete the record in the row.</li>
-			<li><i class="fa-solid fa-sort"></i> - Sort the rows (updating the database).</li>
-		</ul>
-		<p>Additional icons used in some lists:</p>
-		<ul>
-			<li><i class="fa-solid fa-calendar"></i> - Edit the dates list associated with the record.</li>
-		</ul>
-	</div>
+<div>
+	<p>The icons in the table perform the following actions:</p>
+	<ul>
+		<li><i class="fa-solid fa-arrow-up"></i><i class="fa-solid fa-arrow-down"></i> - Move a row up or down (updating the database).</li>
+		<li><i class="fa-solid fa-plus"></i> - Add a new record.</li>
+		<li><i class="fa-solid fa-pen-to-square"></i> - Edit the record in the row.</li>
+		<li><i class="fa-solid fa-copy"></i> - Copy the record in the row.</li>
+		<li><i class="fa-solid fa-sort"></i> - Sort the rows (updating the database).</li>
+		<li><i class="fas fa-check-square"></i> - Perform bulk copy or delete. Exposes copy/delete buttons when set.</li>
+	</ul>
 </div>
