--- a/solution/Msh/Msh.WebApp/Views/Shared/Components/AdminHotelSelect/Default.cshtml
+++ b/solution/Msh/Msh.WebApp/Views/Shared/Components/AdminHotelSelect/Default.cshtml
@@ -3,7 +3,7 @@
 <div class="row">
 	<div class="col-4">
 		<div class="form-group mb-3">
-			<label for="selectHotel" class="control-label">Hotel Code <info-icon name="info-hotel-code" /></label>
+			<label for="selectHotel" class="control-label">Select Hotel</label>
 			<select class="form-control" id="selectHotel">
 				@foreach (var h in @Model.Hotels)
 				{
