--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/TestModelList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/TestModelList.cshtml
@@ -66,7 +66,16 @@
 @await Html.PartialAsync("Admin/_AdminErrorBlock", "")
 
 <div id="page-info" style="display:none;">
-	@await Html.PartialAsync("Hotels/_ListIconsInfo", "Test Models")
+	<div>
+		<span>Test Model</span>
+		<div>
+			<p>
+				A model used for testing development.
+			</p>
+			@await Html.PartialAsync("Hotels/_ListIconsInfo", "Test Models")
+		</div>
+	</div>
+
 </div>
 
 @section Scripts {
