--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/RatePlanList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/RatePlanList.cshtml
@@ -21,80 +21,10 @@
 @await Component.InvokeAsync("AdminHotelSelect", @Model.HotelCode)
 
 <div class="row">
-	<div class="col-12">
-		<table>
-			<tr>
-				<th>
-					<div class="cell-outer">
-						<div class="cell-inner">
-							<p>Code</p>
-						</div>
-						<div class="cell-inner">
-							<a href="javascript:window.mshMethods.sortList('@Model.HotelCode')">
-								<i class="fa-solid fa-sort"></i>
-							</a>
-						</div>
-					</div>
-				</th>
-				<th>Group Code</th>
-				<th>Description</th>
-				<th>   
-					<div class="cell-outer">
-						<div class="cell-inner">
-							<a asp-controller="Hotels" asp-action="RatePlanAdd" asp-route-hotelCode="@Model.HotelCode">
-								<i class="fa-solid fa-plus"></i>
-							</a>
-						</div>
-						<div class="cell-inner">
-							<info-icon name="info-list-icons" />
-						</div>
-					</div>
-				</th>
-				<th>
-					<div class="cell-outer">
-						<div class="cell-inner">
-							<input type="checkbox" name="bulk-check" id="blk" data-msh-code="0" />
-						</div>
-					</div>
-				</th>
-			</tr>
-			
-			@foreach (var rt in @Model.RatePlans)
-			{
-				<tr>
-					<td>@rt.RatePlanCode</td>
-					<td>@rt.Group</td>
-					<td>@rt.Description</td>
-					<td style="width:80px;">
-						
-						<div class="cell-outer">
-							<div class="cell-inner">
-								<a asp-controller="Hotels" asp-action="RatePlanEdit" asp-route-code="@rt.RatePlanCode" asp-route-hotelCode="@Model.HotelCode">
-									<i class="fa-solid fa-pen-to-square"></i>
-								</a>
-							</div>
-							<div class="cell-inner">
-								<a href="javascript:window.mshMethods.deleteItem('@rt.RatePlanCode', '@Model.HotelCode')" >
-									<i class="fa-solid fa-times"></i>
-								</a>
-							</div>
-							<div class="cell-inner">
-								<a href="javascript:window.mshMethods.copyItem('@rt.RatePlanCode', '@Model.HotelCode')">
-									<i class="fa-solid fa-copy"></i>
-								</a>
-							</div>
-						</div>
-					</td>
-					<td style="width:30px;">
-						<div class="cell-outer">
-							<div class="cell-inner">
-								<input type="checkbox" name="bulk-check" id="blk-@rt.RatePlanCode" data-msh-code="@rt.RatePlanCode" />
-							</div>
-						</div>
-					</td>
-				</tr>
-			}
-		</table>
+	<div class="col-12" id="table-target">
+		
+		@await Html.PartialAsync("Hotels/_RatePlansTable", @Model);
+
 	</div>
 </div>
 
