Add bulk operations and move for hotels and room types

--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/ExtrasList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/ExtrasList.cshtml
@@ -24,7 +24,7 @@
 <div class="row">
 	<div class="col-12" id="table-target">
 
-		@await Html.PartialAsync("Hotels/_ExtrasTable", @Model);
+		@await Html.PartialAsync("Hotels/_ExtrasTable", @Model)
 
 	</div>
 </div>
