--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/RatePlanList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/RatePlanList.cshtml
@@ -23,7 +23,7 @@
 <div class="row">
 	<div class="col-12" id="table-target">
 		
-		@await Html.PartialAsync("Hotels/_RatePlansTable", @Model);
+		@await Html.PartialAsync("Hotels/_RatePlansTable", @Model)
 
 	</div>
 </div>
