--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/RoomTypeList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/RoomTypeList.cshtml
@@ -5,6 +5,7 @@
 	var title = "Room Type List";
 	ViewData["Title"] = title;
 	ViewBag.InfoIcons = "Room Types";
+
 }
 
 @await Component.InvokeAsync("AdminMenu", new
@@ -22,80 +23,9 @@
 @await Component.InvokeAsync("AdminHotelSelect", @Model.HotelCode)
 
 <div class="row">
-	<div class="col-12">
-		<table>
-			<tr>
-				<th>
-					<div class="cell-outer">
-						<div class="cell-inner">
-							<p>Code</p>
-						</div>
-						<div class="cell-inner">
-							<a href="javascript:window.mshMethods.sortList('@Model.HotelCode')">
-								<i class="fa-solid fa-sort"></i>
-							</a>
-						</div>
-					</div>
-				</th>
-				<th>Group Code</th>
-				<th>Name</th>
-				<th>   
-					<div class="cell-outer">
-						<div class="cell-inner">
-							<a asp-controller="Hotels" asp-action="RoomTypeAdd" asp-route-hotelCode="@Model.HotelCode">
-								<i class="fa-solid fa-plus"></i>
-							</a>
-						</div>
-						<div class="cell-inner">
-							<info-icon name="info-list-icons" />
-						</div>
-					</div>
-				</th>
-				<th>
-					<div class="cell-outer">
-						<div class="cell-inner">
-							<input type="checkbox" name="bulk-check" id="blk" data-msh-code="0" />
-						</div>
-					</div>
-				</th>
-			</tr>
-			
-			@foreach (var rt in @Model.RoomTypes)
-			{
-				<tr>
-					<td>@rt.Code</td>
-					<td>@rt.GroupCode</td>
-					<td>@rt.Name</td>
-					<td style="width:80px;">
-						<div class="cell-outer">
-							<div class="cell-inner">
-								<a asp-controller="Hotels" asp-action="RoomTypeEdit" asp-route-code="@rt.Code" asp-route-hotelCode="@Model.HotelCode">
-									<i class="fa-solid fa-pen-to-square"></i>
-								</a>
-							</div>
-							<div class="cell-inner">
-								<a href="javascript:window.mshMethods.deleteItem('@rt.Code', '@Model.HotelCode')" >
-									<i class="fa-solid fa-times"></i>
-								</a>
-							</div>
-							<div class="cell-inner">
-								<a href="javascript:window.mshMethods.copyItem('@rt.Code', '@Model.HotelCode')">
-									<i class="fa-solid fa-copy"></i>
-								</a>
-							</div>
-						</div>
-					</td>
-					<td style="width:30px;">
-						<div class="cell-outer">
-							<div class="cell-inner">
-								<input type="checkbox" name="bulk-check" id="blk-@rt.Code" data-msh-code="@rt.Code" />
-							</div>
-						</div>
-					</td>
-				</tr>
-			}
-			
-		</table>
+	<div class="col-12" id="table-target">
+		
+		@await Html.PartialAsync("Hotels/_RoomTypesTable", @Model)
 
 	</div>
 </div>
