--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_HotelEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_HotelEdit.cshtml
@@ -29,6 +29,12 @@
 				<input asp-for="ChainCode" class="form-control" />
 				<span asp-validation-for="ChainCode" class="text-danger"></span>
 			</div>
+			
+			<div class="form-check form-switch mb-3">
+				<input asp-for="Enabled" type="checkbox" class="form-check-input " />
+				<label asp-for="Enabled" class="form-check-label"></label>&nbsp;
+				<info-icon name="info-enabled" />
+			</div>
 
 			<div class="form-group mb-3">
 				<label asp-for="Name" class="control-label">Name <info-icon name="info-name" /></label>
