--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_HotelsTable.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_HotelsTable.cshtml
@@ -10,6 +10,7 @@
 	<tr>
 		<th>Hotel Code</th>
 		<th>Chain Code</th>
+		<th>Enabled</th>
 		<th>Name</th>
 		<th>Stay Dates</th>
 		<th>Book Dates</th>
@@ -44,6 +45,7 @@
 		<tr>
 			<td>@hotel.HotelCode</td>
 			<td>@hotel.ChainCode</td>
+			@await Html.PartialAsync("Hotels/_TableCheckMarkCell", hotel.Enabled)
 			<td>@hotel.Name</td>
 			<td style="width:80px;">
 				<div class="cell-outer">
