--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_SpecialEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_SpecialEdit.cshtml
@@ -35,6 +35,12 @@
 				<label asp-for="Enabled" class="form-check-label"></label>&nbsp;
 				<info-icon name="info-enabled" />
 			</div>
+			
+			<div class="form-check form-switch mb-3">
+				<input asp-for="AdultsOnly" type="checkbox" class="form-check-input " />
+				<label asp-for="AdultsOnly" class="form-check-label"></label>&nbsp;
+				<info-icon name="info-adults-only" />
+			</div>
 
 			
 			<div class="form-group mb-3">
