--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_SpecialsTable.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_SpecialsTable.cshtml
@@ -102,7 +102,7 @@
 						@rt.RatePlanCodes.Count
 					</div>
 					<div class="cell-inner">
-						<a asp-controller="Hotels" asp-action="SpecialEditRates" asp-route-hotelCode="@Model.HotelCode" asp-route-code="@rt.Code">
+						<a asp-controller="Hotels" asp-action="SpecialEditRatePlans" asp-route-hotelCode="@Model.HotelCode" asp-route-code="@rt.Code">
 							<i class="fab fa-windows"></i>
 						</a>
 					</div>
